--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "JS with TDD course",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src/*.js",
+    "prepush": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/usuarioJapa/tdd-course/issues"
   },
-  "homepage": "https://github.com/usuarioJapa/tdd-course#readme"
+  "homepage": "https://github.com/usuarioJapa/tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "husky": "^1.1.0"
+  }
 }
